# immudb-rs

./: Cargo.toml
immudb-rs/: Cargo.toml  build.rs
immudb-rs/proto/immudb/: authorization.proto  documents.proto
immudb-rs/src/: interceptor.rs  lib.rs  sql.rs
immudb-rs/src/client/: mod.rs
immudb-rs/src/document/: mod.rs
immudb-rs/src/protocol/: immudb.schema.rs
proto/: google
proto/immudb/: schema.proto
src/: builder.rs  error.rs  interface.rs  lib.rs  main.rs  sql.rs
src/client/: conv.rs  mod.rs
src/document/: builder.rs  conv.rs
src/protocol/: immudb.model.rs  immudb.schema.rs  mod.rs
to_params_derive/: Cargo.toml
to_params_derive/src/: lib.rs
